--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- HERO -->
     <section class="hero">
       <h1>Kita Serius.</h1>
-      <p>Kami bantu kamu dari bikin <strong>website</strong>, <strong>aplikasi</strong>, <strong>game</strong>, sampai <strong>kelas pelatihan IT & hacking</strong> yang real & relevan.</p>
+      <p>Kami bantu kamu dari bikin <strong>website</strong>, <strong>aplikasi</strong>, <strong>game</strong>, sampai <strong>kelas pelatihan IT & Hacking</strong> yang real & relevan.</p>
       <a href="https://wa.me/6287857424226" class="primary" role="button">Konsultasi Gratis Sekarang</a>
     </section>
 
