--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="grid">
         <figure>
           <img src="assets/img/yudi-profile.jpg" alt="Yudi Ardata" style="border-radius: 50%; width: 120px;" />
-          <figcaption><strong>Yudi Ardata</strong><br>Founder • Developer • Mentor</figcaption>
+          <figcaption><strong>Yudi Ardata</strong><br>Founder</figcaption>
         </figure>
 
         <figure>
