--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- CTA KONTAK -->
     <section id="kontak" class="section-box">
       <h2>Kontak Kami</h2>
-      <p><strong>WhatsApp:</strong> <a href="https://wa.me/6287857424226">+62 878 5742 4226</a></p>
+      <p><strong>WhatsApp:</strong> <a href="https://wa.me/6287857424226">087857424226</a></p>
       <p><strong>Email:</strong> <a href="mailto:bikinserius@gmail.com">bikinserius@gmail.com</a></p>
       <p><strong>Instagram:</strong> <a href="https://instagram.com/bikinserius.id" target="_blank">@bikinserius.id</a></p>
     </section>
