--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
       <div class="grid">
         <figure>
           <img src="assets/img/yudi-profile.jpg" alt="Yudi Ardata" style="border-radius: 50%; width: 120px;" />
-          <figcaption><strong>HexNoir</strong><br>CEO & Ethical Hacker</figcaption>
+          <figcaption>
+            <strong style="color:#8B0000;">HexNoir</strong><br>
+            <span style="color:#8B0000;">CEO & Ethical Hacker</span>
+          </figcaption>
         </figure>
 
         <figure>
