--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
       </div>
 
       <ul>
-        <li><strong>Alex</strong> — Tim Digital</li>
-        <li><strong>Neila</strong> — Business Strategist</li>
+        <li><strong>Arik</strong> — Tim Digital</li>
+        <li><strong>Ivan</strong> — Business Strategist</li>
         <li><strong>Hirson</strong> — Backend Developer</li>
       </ul>
     </section>
