--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <figure>
           <img src="assets/img/yudi-profile.jpg" alt="Yudi Ardata" style="border-radius: 50%; width: 120px;" />
           <figcaption>
-            <strong style="color:#8B0000;">Null Byte</strong><br>
+            <strong style="color:#8B0000;">Yudi Ardata</strong><br>
             <span style="color:#8B0000;">CEO & Ethical Hacker</span>
           </figcaption>
         </figure>
